added EncodingSymbol